<resources>
    <string name="app_name">AcadMan</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="EnrollmentNo">Enrollment No.</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="mobileno">Mobile No.</string>
    <string name="email">Email</string>
    <string name="answer">Answer</string>
    <array name="securityquestion">
        <item>Choose One</item>
        <item>What city were you born in?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What was the name of your first pet?</item>
        <item>Who is your favorite author?</item>
        <item>What was the last name of your favorite teacher?</item>
        <item>What is the name of the street on which you grew up?</item>
        <item>What is the name of your favorite sports team?</item>
        <item>Who is your all-time favorite movie character?</item>
        <item>What was the make of your first car?</item>
    </array>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_dashboard">AcadMan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
