<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/loginbackground">
    <ProgressBar
        android:id="@+id/progdia"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/mainchapa"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldpasstil"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

    <AutoCompleteTextView
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/newpasstil"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

    <AutoCompleteTextView
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_key"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/conpasstil"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

    <AutoCompleteTextView
        android:id="@+id/conpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_conkey"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
</android.support.design.widget.TextInputLayout>
    </LinearLayout>
</FrameLayout>